Add GitHub Pages deployment and screenshot documentation
- Add GitHub Actions workflow for automatic React dashboard deployment
- Configure package.json for GitHub Pages deployment
- Add screenshots directory with detailed capture instructions
- Document GuardDuty findings, auto-quarantine, and SIEM dashboard screenshots
- Prepare for enhanced project showcase and live demo

--- a/react-dashboard/package.json
+++ b/react-dashboard/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "React dashboard for GuardDuty security findings",
   "private": true,
+  "homepage": "https://mihirajmera.github.io/guardduty-siem-automation",
   "dependencies": {
     "@aws-amplify/ui-react": "^5.0.0",
     "@aws-sdk/client-cloudwatch-logs": "^3.0.0",
